z-index fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7057,6 +7057,11 @@ section {
   margin: 0;
   padding: 0; }
 
+button,
+input,
+.submit {
+  z-index: 9; }
+
 .word-cosmos,
 label,
 span,
