--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -32,6 +32,12 @@ section {
     padding: 0;
 }
 
+button,
+input,
+.submit{
+    z-index: 9
+}
+
 .word-cosmos,
 label,
 span,
